// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config-applying reducer should handle CLOSE_CONFIG_PREVIEW 1`] = `
Object {
  "configData": null,
  "id": null,
  "loaded": false,
  "oldConfigData": null,
  "serviceId": null,
  "target": null,
  "visible": false,
}
`;

exports[`config-applying reducer should handle END_ACTIVE_CONFIG_LOADING 1`] = `
Object {
  "activeConfigData": Object {
    "comment": "made a config",
    "date": "2018-01-10T11:12:13",
    "id": 234,
    "statuses": Array [
      Object {
        "comment": "",
        "status": "active",
      },
    ],
  },
  "configData": Object {
    "comment": "made a config",
    "data": Object {
      "field1": "value1",
      "field2": "value2",
      "field3": "value3",
    },
    "date": "2018-01-10T11:12:13",
    "id": 236,
    "statuses": Array [
      Object {
        "comment": "",
        "status": "preview",
      },
    ],
  },
  "id": 236,
  "loaded": true,
  "oldConfigData": Object {
    "comment": "made a config",
    "data": Object {
      "field1": "value1",
      "field2": "value2",
      "field3": "value3",
    },
    "date": "2018-01-10T11:12:13",
    "id": 234,
    "statuses": Array [
      Object {
        "comment": "",
        "status": "active",
      },
    ],
  },
  "serviceId": 123,
  "visible": true,
}
`;

exports[`config-applying reducer should handle OPEN_CONFIG_APPLYING 1`] = `
Object {
  "configData": Object {
    "comment": "made a config",
    "data": Object {
      "field1": "value1",
      "field2": "value2",
      "field3": "value3",
    },
    "date": "2018-01-10T11:12:13",
    "id": 236,
    "statuses": Array [
      Object {
        "comment": "",
        "status": "preview",
      },
    ],
  },
  "id": 236,
  "loaded": false,
  "oldConfigData": null,
  "serviceId": 123,
  "target": "active",
  "visible": true,
}
`;

exports[`config-applying reducer should handle START_ACTIVE_CONFIG_LOADING 1`] = `
Object {
  "configData": Object {
    "comment": "made a config",
    "data": Object {
      "field1": "value1",
      "field2": "value2",
      "field3": "value3",
    },
    "date": "2018-01-10T11:12:13",
    "id": 236,
    "statuses": Array [
      Object {
        "comment": "",
        "status": "preview",
      },
    ],
  },
  "id": 236,
  "serviceId": 123,
  "type": "OPEN_CONFIG_APPLYING",
}
`;

exports[`config-applying reducer should return the initial state 1`] = `
Object {
  "configData": null,
  "id": null,
  "loaded": false,
  "oldConfigData": null,
  "serviceId": null,
  "target": null,
  "visible": false,
}
`;
